
syntax = "proto3";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

option csharp_namespace = "GrpcToolTest";

service GrpcServices {
    rpc GetAllTypes(AllTypes) returns (AllTypes) {}
}

message AllTypes {
    int32 Id = 1;
    int32 NullableId = 2;
    uint32 Byte = 3;
    int32 Short = 4;
    int32 Int = 5;
    int64 Long = 6;
    uint32 UShort = 7;
    uint32 UInt = 8;
    uint64 ULong = 9;
    float Float = 10;
    double Double = 11;
    .bcl.Decimal Decimal = 12;
    string String = 13;
    .bcl.DateTime DateTime = 14;
    .bcl.TimeSpan TimeSpan = 15;
    DateTimeOffset DateTimeOffset = 16;
    .bcl.Guid Guid = 17; // default value could not be applied: 00000000-0000-0000-0000-000000000000
    uint32 Char = 18;
    KeyValuePair_String_String KeyValuePair = 19;
    .bcl.DateTime NullableDateTime = 20;
    .bcl.TimeSpan NullableTimeSpan = 21;
    repeated string StringList = 22;
    repeated string StringArray = 23;
    map<string,string> StringMap = 24;
    map<int32,string> IntStringMap = 25;
    SubType SubType = 26;
    Point Point = 27;
    string aliasedName = 28;
}

message DateTimeOffset {
}
message KeyValuePair_String_String {
    string Key = 1;
    string Value = 2;
}
message Point {
    double X = 1;
    double Y = 2;
}
message SubType {
    int32 Id = 1;
    string Name = 2;
}
